# Calculate

./: CMakeLists.txt  README.md  makefile
include/: calculate.h
lib/: calculate.cpp
make/: macmakefile  winmakefile
src/: main.cpp
